syntax = "proto3";

package zjuintl;

service ZJUintl {
    rpc connect_test(Infosent) returns (Infoback) {}    
    rpc getCourse(User) returns (Courses) {}
    rpc getBBGradeList(User) returns (BBGradeList) {}
    rpc getBBCertainGrade(BBGradeUser) returns (BBGradeItemList) {}
}

//rpc => getBBGradeList
message BBGradeList {
    string status = 1;
    repeated BBCourseitem courses = 2;
}

message BBCourseitem {
    string name = 1;
    string grade = 2;
    string courseid = 3;
}

//rpc => getBBCertainGrade
message BBGradeUser {
    string username = 1;
    string password = 2;
    string courseid = 3;
}
message BBGradeItemList {
    string status = 1;
    repeated BBGradeItem items = 2;
}
message BBGradeItem {
    string name = 1;
    string grade = 2;
}


//rpc => connect_test
message Infosent {
    string name = 1;
}

message Infoback {
    string status = 1;
    string message = 2;
}


//rpc => getCourse
message User {
    string username = 1;
    string password = 2;
}

message Courses {
    string status = 1;
    repeated Course course = 2;
}

message Course {
    string id = 1;
    string name = 2;
    string category = 3;
    string place = 4;
    string teacher = 5;
    string week = 6;
    string day = 7;
    Time time = 8;
}
message Time {
    ExactTime startTime = 1;
    ExactTime endTime = 2;
}
message ExactTime {
    int32 hour = 1;
    int32 min = 2;
}